<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/review_info_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        tools:context=".EditActivity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/store_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name"
            android:textSize="20sp"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/store_name_et"/>
        <EditText
            android:id="@+id/store_name_et"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:text="영재추천맛집"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/store_name_tv"
            app:layout_constraintStart_toEndOf="@id/store_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/store_name_tv"
            />
        <TextView
            android:id="@+id/rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/rating"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/rating_bar"
            app:layout_constraintTop_toBottomOf="@id/store_name_tv" />
        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5"
            app:layout_constraintTop_toBottomOf="@id/store_name_et"
            app:layout_constraintStart_toStartOf="@id/store_name_et"/>
        <TextView
            android:id="@+id/menu_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="20sp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/rating_tv"
            app:layout_constraintStart_toStartOf="@id/menu_et"/>
        <EditText
            android:id="@+id/menu_et"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/border_regular"
            app:layout_constraintTop_toBottomOf="@id/menu_tv"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/total_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textSize="18sp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/menu_et"
            app:layout_constraintEnd_toStartOf="@id/total_price_et"/>
        <EditText
            android:id="@+id/total_price_et"
            android:layout_width="100dp"
            android:layout_height="0dp"
            tools:text="38,500원"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/menu_et"
            app:layout_constraintBottom_toBottomOf="@id/total_price_tv"/>
        <TextView
            android:id="@+id/review_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textSize="20sp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/total_price_tv"
            app:layout_constraintStart_toStartOf="@id/menu_tv"/>
        <EditText
            android:id="@+id/review_et"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:text="너무 맛있어요!"
            android:textSize="16sp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/border_regular"
            app:layout_constraintTop_toBottomOf="@id/review_tv"
            app:layout_constraintStart_toStartOf="@id/menu_et"/>
        <TextView
            android:id="@+id/photo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:textSize="20sp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/review_et"
            app:layout_constraintStart_toStartOf="@id/review_et"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/photo_btn"
            android:textSize="14sp"
            android:layout_margin="5dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toTopOf="@id/photo_tv"
            app:layout_constraintStart_toEndOf="@id/photo_tv"
            app:layout_constraintBottom_toBottomOf="@id/photo_tv"/>
        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="20sp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/photo_tv"
            app:layout_constraintEnd_toEndOf="@id/photo_tv"/>
        <TextView
            android:id="@+id/location_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="울산광역시 북구 화동 7길 26"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/photo_btn"
            app:layout_constraintBottom_toBottomOf="@id/location_tv"
            app:layout_constraintTop_toTopOf="@id/location_tv"/>
        <ImageView
            android:id="@+id/map_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            tools:src = "@drawable/home"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toEndOf="@id/location_info_tv"
            app:layout_constraintTop_toTopOf="@id/location_info_tv"
            app:layout_constraintBottom_toBottomOf="@id/location_info_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
